[package]
name = "gcoma"
description = "Geri's Connection Manager"
repository = "https://github.com/weyh/gcoma"
version = "1.2.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.23.0"
strum_macros = "0.23.1"
ansi_term = "0.12.1"
clap = { version = "3.0.10", features = ["derive"] }
