[package]
name = "gcoma"
version = "2.0.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.1"
tui-textarea = "0.4.0"
